# fair-test

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: codeql-analysis.yml  deploy-docs.yml  publish-docs.yml  publish-package.yml  publish.yml  run-tests.yml  test.yml
FairTest/: index.html
FairTestAPI/: index.html
FairTestEvaluation/: index.html
contributing/: index.html
create-test/: index.html
development/: index.html
development-workflow/: index.html
docs/: FairTest.md  FairTestAPI.md  FairTestEvaluation.md  contributing.md  create-test.md  development-workflow.md  development.md  fair-test-api.md  fair-test.md  get-started.md  index.md  publish.md  requirements.txt  usage.md
example/: .env  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
example/metrics/: a1_access_protocol.py  a1_metadata_protocol.py  f1_unique_persistent_identifier.py  f2_machine_readable_metadata.py  f3_identifier_in_metadata.py  f4_searchable.py  i1_data_knowledge_representation.py  i1_data_knowledge_representation_weak.py  i1_knowledge_representation.py  i1_metadata_knowledge_representation.py  i1_metadata_knowledge_representation_weak.py  i2_fair_vocabularies.py  r1_accessible_license.py
fair_test/: __init__.py  config.py  fair_test.py  fair_test_api.py  fair_test_evaluation.py  fair_test_logger.py  metadata_harvester.py
get-started/: index.html
publish/: index.html
scripts/: check.sh  dev.sh  docs-serve.sh  format.sh  lint.sh  test.sh
search/: search_index.json
src/fair_test/: __init__.py  fair_test.py  fair_test_api.py  fair_test_evaluation.py  fair_test_logger.py  metadata_harvester.py
tests/: conftest.py  test_fair_testing_api.py  test_metrics_auto.py  test_metrics_list.py
usage/: index.html
